--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,8 @@ server:
   port: 3030
   servlet:
     context-path: /blog
+    encoding:
+      charset: UTF-8
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/xml/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
